--- a/src/pages/editor/index.less
+++ b/src/pages/editor/index.less
@@ -19,6 +19,7 @@
   }
   .container {
     // height: 100vh;
+    border: 1px solid red;
     height: calc(100% - 56px);
     display: flex;
     .list {
