--- a/src/pages/editor/index.less
+++ b/src/pages/editor/index.less
@@ -19,7 +19,7 @@
   }
   .container {
     // height: 100vh;
-    border: 1px solid red;
+    // border: 1px solid red;
     height: calc(100% - 56px);
     display: flex;
     .list {
@@ -89,8 +89,10 @@
         position: absolute;
         top: 0;
         left: 0;
+        border: 1px solid red;
       }
       .tickMarkLeft {
+        border: 1px solid red;
         width: 50px;
         height: calc(100% - 50px);
         position: absolute;
@@ -256,6 +258,7 @@
       }
     }
     .rightcolla {
+      border: 1px solid red;
       width: 20px;
       height: 80px;
       background: #ffffff;
