--- a/src/global.css
+++ b/src/global.css
@@ -142,7 +142,7 @@ img {
   margin: 100px auto;
   border:16px solid #f3f3f3;
   border-radius:50%;
-  border-top:16px solid #2842d8;
+  border-top:16px solid #d82828;
   width:130px;
   height:130px;
   display: flex;
