--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -23,8 +23,11 @@
       }
     }
     .operation {
-      margin-top: 30px;
-      text-align: center;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -100%);
+
       .card {
         display: inline-flex;
         align-items: center;
@@ -38,6 +41,7 @@
         border: 1px solid #f0f0f0;
         margin-right: 30px;
         cursor: pointer;
+
         &:hover {
           box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
